[build-system]
requires = ["maturin>=1.5,<2"]
build-backend = "maturin"

[project]
name = "test_pypi_deploy_git-cliff"
requires-python = ">=3.7"
classifiers = [
    "Intended Audience :: Developers",
    "Topic :: Software Development",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

[tool.maturin]
bindings = "bin"
manifest-path = "../git-cliff/Cargo.toml"
module-name = "git-cliff"
